--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Here is my HTML CV</title>
+    <link rel="stylesheet" href="style.css">
+    <title>CV</title>
 </head>
 <body>
-    
+    <h1>Here is my HTML CV</h1>
 </body>
 </html>
